Spring Cloud Gateway 라우팅 명세 조회를 위한 Actuator 설정 추가

--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,9 @@ dependencyManagement {
 dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-gateway-server-webflux'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    
+    // Actuator for monitoring and management endpoints
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
     // JWT 검증용
     implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
