--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -91,6 +91,17 @@ jwt:
   authService:
     jwksUri: http://localhost:8001/.well-known/jwks.json
 
+# Actuator 설정 (모니터링 및 관리 엔드포인트)
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info,metrics  # 필요한 엔드포인트만 노출
+      base-path: /actuator
+  endpoint:
+    health:
+      show-details: when-authorized
+
 # 로깅 설정
 logging:
   level:
